# desktop-shell

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/protocols/: lunaris-shell-overlay.xml  lunaris-window-attach-v1.xml
src-tauri/src/: app_history.rs  app_index.rs  audio.rs  battery.rs  bluetooth.rs  bluetooth_agent.rs  brightness.rs  clipboard_history.rs  clipboard_ipc.rs  event_bus.rs  extension_registry.rs  gtk_menu_bridge.rs  layer_shell.rs  layout.rs  lib.rs  main.rs  menu_store.rs  minimized_windows.rs  module_errors.rs  module_scheme.rs  modules.rs  modulesd_client.rs  modulesd_commands.rs  network.rs  night_light.rs  notifications.rs  output_bars.rs  permissions.rs  power.rs  projects.rs  quick_actions.rs  recent_files.rs  settings_provider.rs  shell_config.rs  shell_overlay_client.rs  shell_runner.rs  sni.rs  system_toggles.rs  wayland_client.rs  waypointer.rs  (+3 more)
src-tauri/src/notifications/: client.rs  mod.rs  protocol.rs  types.rs
src-tauri/src/theme/: commands.rs  css.rs  loader.rs  mod.rs  schema.rs
src-tauri/src/waypointer_system/: manager.rs  mod.rs  plugin.rs  registry.rs
src-tauri/src/waypointer_system/plugins/: app_search.rs  calculator.rs  clipboard.rs  datetime.rs  dict.rs  files.rs  man.rs  mod.rs  power.rs  process_kill.rs  projects.rs  quick_actions.rs  shell.rs  unicode.rs  unit_converter.rs  url.rs  window_switcher.rs
src-tauri/themes/: dark.toml  light.toml
src/lib/: invokeWithTimeout.ts  theme.ts
src/routes/: +layout.svelte  +page.svelte
(+102 files in other folders)
